tests/reject/bad_iden.ul
void main() {
     int 1hello;
}